glx/testdata/invalid/invalid-assertion-claims/persons/person-child-alice.glx
persons:
  person-alice:
    properties:
      name:
        value: "Alice Thompson"
        fields:
          given: "Alice"
          surname: "Thompson"
      gender: female
